fix image not showing bug

--- a/src/global.css
+++ b/src/global.css
@@ -73,7 +73,7 @@ blockquote {
 
 blockquote:before {
   color: #ccc;
-  content: open-quote;
+  /* content: open-quote; */
   font-size: 4em;
   line-height: 0.1em;
   /* margin-right: 0.25em; */
@@ -81,7 +81,7 @@ blockquote:before {
 }
 blockquote:after {
   color: #ccc;
-  content: close-quote;
+  /* content: close-quote; */
   font-size: 4em;
   line-height: 0.1em;
   /* margin-left: 0.25em; */
